[project]
name = "kobo-font-converter"
version = "0.1.0"
description = "Convert GPOS kerning into Kobo-friendly legacy kern tables"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fonttools>=4.50.0",
]

[project.scripts]
kobo-font-converter = "kobo_font_converter:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
